# strideAI

./: .gitignore  README.md  StrideAI.ipynb  abc.py  main.py  pyproject.toml  stride_resolutions.db
backend/: .env.example  README.md  pyproject.toml  requirements.txt  server.py  server_simple.py  start.sh  test_minimal.py
frontend/: App.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: LiveConversation.tsx  ResolutionForm.tsx  Visualizer.tsx
